# loose-papers

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_bio_and_more.py
apps/accounts/tests/: test_models.py  test_views.py
apps/core/: urls.py  views.py
apps/core/static/core/: mock_ui.css  mock_ui.js
apps/core/static/core/css/: style.css
apps/core/static/core/js/: app.js
apps/core/static/core/js/api/: client.js  config.js
apps/core/static/core/js/auth/: api.js
apps/core/static/core/js/files/: api.js
apps/core/static/core/js/storage/: tokens.js
apps/core/static/core/js/ui/: ui.js
apps/core/templates/core/: index.html  mock_ui.html
apps/files/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/files/migrations/: 0001_initial.py
apps/files/tests/: conftest.py  test_models.py  test_serializers.py  test_views.py
config/: urls.py
config/settings/: __init__.py  apps.py  base.py  database.py  local.py  security.py  test.py
