[project]
name = "loose-papers"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakub Dziarkowski", email = "jakubdziarkowski4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "django-rq (>=3.2.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-stubs-ext (>=5.2.8,<6.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "django-stubs[compatible-mypy] (>=5.2.8,<6.0.0)",
    "djangorestframework-stubs[compatible-mypy] (>=3.16.7,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "B", "I", "C"]

[tool.mypy]
python_version = 3.14
files = ["apps", "config"]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
addopts = "--cov=apps --cov-report=term-missing --cov-fail-under=90"